fix checkbox label wrap

--- a/projectforge-webapp/src/components/design/input/Input.module.scss
+++ b/projectforge-webapp/src/components/design/input/Input.module.scss
@@ -158,6 +158,7 @@
           @include transition(.3s);
         }
 
+        white-space: nowrap;
         padding-left: 2em;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
